# mdweb

./: .gitignore  MANIFEST.in  README.md  main.py  markdown.py  markdown_syntax.md  pyproject.toml
mdweb/: __main__.py  markdown.py  test_markdown.py
mdweb/template/: style.css  template.html
src/: main.py  markdown.py  test_markdown.py
template/: template.html
